<resources>
    <string name="app_name">BuffetRestaurent</string>
    <string name="strSignIn">Sign In</string>
    <string name="strSignUp">Sign Up</string>
    <string name="strAccount">Email address</string>
    <string name="strPass">Password</string>
    <string name="strRePass">Confirm Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strSubmit">Submit</string>
    <string name="strSlogan">Delicious food for you</string>
    <string name="strUpdate">Update</string>
    <string name="strAddStaff">Add Staff</string>
    <string name="strSearch">Search</string>
    <string name="strFood">Food</string>
    <string name="strDrink">Drink</string>
    <string name="strDessert">Dessert</string>
    <string name="strProfile">Profile</string>
    <string name="strDiscountHis">My Discount</string>
    <string name="strChangePass">Change Password</string>
    <string name="strReserHis">Reservation History</string>
    <string name="strOpenMenu">Open</string>
    <string name="strCloseMenu">Close</string>
    <string name="strName">Name</string>
    <string name="strPhone">Phone</string>
    <string name="strAddress">Address</string>
    <string name="strHome">Home</string>
    <string name="strViewRes">Reservations History</string>
    <string name="strAddRes">Reservations</string>
    <string name="strCheckout">Checkout</string>
    <string name="strCurrentPoint">Your Current Point : </string>
    <string name="strBuy">Buy</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strOK">Ok</string>
    <string name="strMenu">Menu</string>
    <string name="strMenuStaff">Menu Management</string>
    <string name="strMenuStaffAddFood">Add food to menu</string>
    <string name="strStaffManage">Staff Management</string>
    <string name="strGender">Gender</string>
    <string name="strAddBalance">Add Balance</string>
    <string name="strDiscountStaffManagement">Discount Management</string>
    <string name="strListDiscountStaffManagement">List Discount</string>
    <string name="strEditDiscountStaffManagement">Edit Discount Management</string>
    <string name="strAddDiscountStaffManagement">Add Discount</string>
    <string name="strHeaderDiscountName">Name</string>
    <string name="strHeaderDiscountPoint">Point</string>
    <string name="strHeaderDiscountPercent">Percent</string>
    <string name="strHeaderDiscountStatus">Status</string>
    <string name="strBack">Back</string>
    <string name="strEdit">Edit</string>
    <string name="strCancel">Cancel</string>
    <string name="strCopy">Copy</string>
    <string name="strBuyDiscount">Shop Discount</string>
    <string name="strDiscountHistory">My Discount</string>
    <string name="strBalance">Add balance</string>
    <string name="strStaffManageMenu">Manage staff</string>
    <string name="strConfirmReservation">Confirm Reservation</string>
    <string name="strCustomerManage">Customer Management</string>
    <string name="strCustomerProfile">Customer Profile</string>
    <string name="strSignOut">Sign Out</string>
    <string name="strFoodManage">Food Management</string>
    <string name="strFoodType1">Food</string>
    <string name="strFoodType2">Drink</string>
    <string name="strFoodType3">Dessert</string>
    <string name="strUpdateFood">Update food</string>
    <string name="strAddFood">Add food</string>
    <string name="strUpdateDiscount">Update Discount</string>
    <string name="strDiscountManage">Discount Management</string>
    <string name="strUpdateRes">Update Reservation</string>
</resources>