<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.Activity.EditDiscountStaffManage">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="49dp"
        android:text="@string/strEditDiscountStaffManagement"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:text="@string/strHeaderDiscountName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:text="@string/strHeaderDiscountPoint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:text="@string/strHeaderDiscountPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:text="@string/strHeaderDiscountStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <Button
        android:id="@+id/editdiscount_btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="75dp"
        android:text="@string/strSubmit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/editdiscount_btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="75dp"
        android:text="@string/strCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editdiscount_edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/strHeaderDiscountName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/editdiscount_edtPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/strHeaderDiscountPoint"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editdiscount_edtName"
        app:layout_constraintTop_toBottomOf="@+id/editdiscount_edtName" />

    <EditText
        android:id="@+id/editdiscount_edtPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/strHeaderDiscountPercent"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/editdiscount_edtName"
        app:layout_constraintTop_toBottomOf="@+id/editdiscount_edtPoint" />

    <Switch
        android:id="@+id/editdiscount_switch"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_marginTop="56dp"
        android:text="Enable"
        app:layout_constraintStart_toStartOf="@+id/editdiscount_edtName"
        app:layout_constraintTop_toBottomOf="@+id/editdiscount_edtPercent" />

    <TextView
        android:id="@+id/editdiscount_txtErrorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/editdiscount_edtName"
        app:layout_constraintTop_toBottomOf="@+id/editdiscount_edtName" />

    <TextView
        android:id="@+id/editdiscount_txtErrorPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/editdiscount_edtPoint"
        app:layout_constraintTop_toBottomOf="@+id/editdiscount_edtPoint" />

    <TextView
        android:id="@+id/editdiscount_txtErrorPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/editdiscount_edtPercent"
        app:layout_constraintTop_toBottomOf="@+id/editdiscount_edtPercent" />

</androidx.constraintlayout.widget.ConstraintLayout>